--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align:center;
     border-radius: 8%;
     background-color: var(--div-bg);
     width:80%;
